--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      REGISTRY: docker.io/${{ secrets.DOCKERHUB_USERNAME }}
+      IMAGE_NAME: github-action-snapshot
+      IMAGE_TAG: latest
+
 
     steps:
     - uses: actions/checkout@v4
@@ -27,6 +32,15 @@ jobs:
       with:
        username: ${{ secrets.DOCKERHUB_USERNAME}}
        password: ${{ secrets.DOCKERHUB_TOKEN}}
+
+
+      # Build the Docker image
+    - name: Build Docker Image
+      run: docker build -t  $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+
+      # Push the Docker image to Docker Hub
+    - name: Push Docker Image
+      run: docker push  $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
 
 
 
