--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,5 +1,5 @@
-
 name: Java Self Practice
+
 on:
   push:
     branches: [ "master" ]
@@ -9,42 +9,39 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     env:
       REGISTRY: docker.io/${{ secrets.DOCKERHUB_USERNAME }}
       IMAGE_NAME: github-action-snapshot
       IMAGE_TAG: latest
 
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
+      # Step 1: Check out the code
+      - uses: actions/checkout@v4
 
-    - name: Build with Maven
-      run: mvn clean install
+      # Step 2: Set up JDK
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Login to dockerhub
-      uses: docker/login-action@v3
-      with:
-       username: ${{ secrets.DOCKERHUB_USERNAME}}
-       password: ${{ secrets.DOCKERHUB_TOKEN}}
+      # Step 3: Build the project with Maven
+      - name: Build with Maven
+        run: mvn clean install
 
-      # Build the Docker image
-    - name: Build Docker Image
-      run: docker build -t  $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
+      # Step 4: Log in to Docker Hub or another container registry
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Push the Docker image to Docker Hub
-    - name: Push Docker Image
-      run: docker push  $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
+      # Step 5: Build the Docker image using the common registry
+      - name: Build Docker Image
+        run: docker build -t $REGISTRY/$IMAGE_NAME:$IMAGE_TAG .
 
-
-
-
-
-
-
-  
+      # Step 6: Push the Docker image to the registry
+      - name: Push Docker Image
+        run: docker push $REGISTRY/$IMAGE_NAME:$IMAGE_TAG
